--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Мои заметки</string>
+    <string name="app_name">Заметки</string>
 
     <string name="successfully_saved_note_message">Заметка сохранена</string>
 
@@ -13,4 +13,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="empty_note">Заметок нет</string>
     <string name="notes_search">Поиск</string>
+    <string name="notifications">Оповещание</string>
+    <string name="saved_note_title">Save Title</string>
+    <string name="saved_note_detail">Save Detail</string>
+    <string name="save_description">description</string>
+    <string name="undo_string">Undo</string>
 </resources>
